--- a/section2.html
+++ b/section2.html
@@ -1,1 +1,18 @@
-Err... Nothing much;
+
+<div class="mdl-grid" style="justify-content: center;">
+
+    <div class="mdl-cell mdl-cell--4-col mdl-cell--middle" >
+        <img src="/note1.jpg" style="max-width:100%;" class="mdl-shadow--2dp"><br><br>  
+        <a class="mdl-button mdl-button--accent mdl-js-button mdl-js-ripple-effect">
+            View
+        </a>
+    </div>
+    
+    <div class="mdl-cell mdl-cell--4-col mdl-cell--middle" >
+        <img src="/note2.jpg" style="max-width:100%;" class="mdl-shadow--2dp"><br><br>  
+        <a class="mdl-button mdl-button--accent mdl-js-button mdl-js-ripple-effect">
+            View
+        </a>
+    </div>
+
+</div>
