--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
 
         <script>
 
-            hello("section2.html");
+            hello("carouselcontent.html");
 
             function hello(a){
 
