--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <div class="main-title mdl-layout__header-row" style="padding-top:12px;">
                     <!-- Title -->
                     <div class="mdl-layout-spacer"></div>
-                    <h3>Yoganathan - Portfolio</h3>
+                    <h3>St. Joseph's College Of Engineering</h3>
                     <div class="mdl-layout-spacer"></div>
                 </div>
                 <!-- Bottom row, not visible on scroll -->
